[package]
name = "ecs-jumper"
version = "0.1.2"
description = "Generate awscli connection strings to running ECS tasks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fmariluis/ecs-jumper"
homepage = "https://github.com/fmariluis/ecs-jumper"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-ecs = "1.43.0"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
